--- a/Ex03.md
+++ b/Ex03.md
@@ -1,7 +1,6 @@
 # Ex. No : 3	
 # RECOGNITION OF A VALID ARITHMETIC EXPRESSION THAT USES
-## Register Number :
-## Date : 
+## Register Number :212222043002
 
 ## AIM   
 To write a yacc program to recognize a valid arithmetic expression that uses operator +,- ,* and /.
@@ -17,9 +16,65 @@ To write a yacc program to recognize a valid arithmetic expression that uses ope
 8.	Enter an arithmetic expression as input and the tokens are identified as output.
 
 ## PROGRAM
+```// arth.l file
+%{
+#include "y.tab.h"
+%}
 
+%%
+
+"=" { printf("\n Operator is EQUAL"); return '='; } "+" { printf("\n Operator is PLUS"); return PLUS; }
+"-" { printf("\n Operator is MINUS"); return MINUS; }
+"/" { printf("\n Operator is DIVISION"); return DIVISION; }
+"*" { printf("\n Operator is MULTIPLICATION"); return MULTIPLICATION; } [a-zA-Z]*[0-9]* { printf("\n Identifier is %s", yytext); return ID; }
+. { return yytext[0]; }
+\n { return 0; }
+
+%%
+
+int yywrap() { return 1;
+}
+
+
+
+// arth.y file
+
+%{
+#include <stdio.h>
+/* This YACC program is for recognizing the Expression */
+%}
+
+%token ID PLUS MINUS MULTIPLICATION DIVISION
+
+%%
+
+statement: ID '=' E {
+printf("\nValid arithmetic expression");
+$$ = $3;
+}
+;
+
+E: E PLUS ID
+| E MINUS ID
+| E MULTIPLICATION ID
+| E DIVISION ID
+| ID
+;
+
+%%
+extern FILE* yyin; int main() {
+do {
+yyparse();
+} while (!feof(yyin)); return 0;
+}
+
+void yyerror(char *s) { fprintf(stderr, "Error: %s\n", s);
+}
+
+```
 
 ## OUTPUT 
+<img width="631" height="598" alt="509302297-f97f1304-d66e-46ef-8dbe-be6acde53a4d" src="https://github.com/user-attachments/assets/94723fc9-52b6-4808-b627-6fb0d17c5114" />
 
 ## RESULT
 A YACC program to recognize a valid arithmetic expression that uses operator +,-,* and / is executed successfully and the output is verified.
